--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -112,7 +112,7 @@
     <string name="no_requests_title">У вас щє не має заявок</string>
     <string name="status_new">Новий</string>
     <string name="status_assigned">У роботі</string>
-    <string name="status_closed">Вирішене/Закритий</string>
+    <string name="status_closed">Готова</string>
     <string name="drawer_scan_qr">Сканер QR коду</string>
     <string name="btn_reconnect">Перепідключитися</string>
     <string name="btn_close">Закрити</string>
