Main screen done

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -50,7 +50,7 @@
     <string name="main_active_till">Безлимитные звонки до</string>
     <string name="date_format">dd.MM.yy</string>
     <string name="buy_unlim_btn">Купить безлимит</string>
-    <string name="not_available_desc_utog">Бесплатно позвонить сможете завтра. Или можете купить еще минут, нажав кнопку "+" рядом с полем доступных минут</string>
+    <string name="not_available_desc_utog">Бесплатно позвонить можете\nзавтра. Или можете купить еще\nминут, нажав кнопку "+" рядом\n с полем доступных минут</string>
     <string name="not_available_desc">Вы можете купить еще минут нажав кнопку ниже</string>
     <string name="tariff_pattern">%s - %s</string>
     <string name="permission_rationale_liqpay">Необходимо предоставить доступ к звонкам для завершения процесса покупки</string>
@@ -134,7 +134,7 @@
     <string name="empty_news">Еще нет новостей\n Тут будет появляться вся важная для вас информация</string>
     <string name="minutes_check_title">Пожалуйста, подождите</string>
     <string name="minutes_check_desc">Синхронизируем данные вашего аккаунта</string>
-    <string name="not_available_title">У вас закончились минуты</string>
+    <string name="not_available_title">У вас закончились\nминуты</string>
     <string name="utog_free_call_title">У вас есть бесплатный звонок</string>
     <string name="utog_free_call_desc">УТОГ каждый день дарит вам бесплатный звонок</string>
     <string name="personal_name">Имя</string>
