--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -101,7 +101,7 @@
     <string name="drawer_share">Рассказать другу</string>
     <string name="action_share">Рассказать\nдругу</string>
     <string name="share_text">Советую установить Переводчик ЖЯ. Помогает мне решать проблемы. Мне очень нравится. https://interpreter.getbw.me</string>
-    <string name="drawer_requests">Текст-Видео-Перевод</string>
+    <string name="drawer_requests">Текст-Видео Перевод</string>
     <string name="request_send_photo">Загрузить файл</string>
     <string name="media_image_gallery">Выбрать фото</string>
     <string name="media_image_camera">Снять фото</string>
