--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,7 +126,7 @@
     <string name="drawer_share">Tell a friend</string>
     <string name="action_share">Tell\na friend</string>
     <string name="share_text">I advise you to install a SL Interpreter. It helps me to solve problems. I like it. https://interpreter.getbw.me</string>
-    <string name="drawer_requests">Text-Video-Interpretation</string>
+    <string name="drawer_requests">Text-Video Interpretation</string>
     <string name="action_requests">Text-Video\nInterpretation</string>
     <string name="request_send_photo">Send file</string>
     <string name="media_image_gallery">Peek a photo</string>
