--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,9 @@
     <string name="error_outside_working_time">Unfortunately you are calling outside office hours</string>
     <string name="error_in_call">You\'ve already calling from other device</string>
     <string name="error_no_right">You have no right to complete this operation</string>
-    <string name="login_accept"><![CDATA[I have read and agree to the <b href=\'https://interpreter.getbw.me/docs/terms_of_use\'>terms of use</b> and <b href=\'https://interpreter.getbw.me/docs/privacy_policy\'>privacy policy</b>]]></string>
+    <string name="login_accept"><![CDATA[I have read and agree to the <b>terms of use</b> and <b>privacy policy</b>]]></string>
+    <string name="login_tos">terms of use</string>
+    <string name="login_privacy_policy">privacy policy</string>
     <string name="date_format">MM/dd/yy</string>
     <string name="main_active_till">Unlimited calls till</string>
     <string name="buy_unlim_btn">Buy unlim</string>
