Change text according to requestˆ

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -52,7 +52,7 @@
     <string name="main_active_till">Безлимитные звонки до</string>
     <string name="date_format">dd.MM.yy</string>
     <string name="buy_unlim_btn">Купить безлимит</string>
-    <string name="not_available_desc_utog">Вы можете купить минуты,\nнажав кнопку “+” рядом с\nполем доступных минут,\nлибо бесплатно позвонить завтра.</string>
+    <string name="not_available_desc_utog">Вы можете купить минуты,\nнажав кнопку “+” рядом с\nполем доступных минут.</string>
     <string name="not_available_desc">Вы можете купить еще минут нажав кнопку ниже</string>
     <string name="tariff_pattern">%s - %s</string>
     <string name="permission_rationale_liqpay">Необходимо предоставить доступ к звонкам для завершения процесса покупки</string>
